--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2470,10 +2470,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "4fde085d-2568-48e2-9103-c8a4b44704fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OverallQual</td>\n",
+       "      <td>0.635339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>GrLivArea</td>\n",
+       "      <td>0.078182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FullBath</td>\n",
+       "      <td>0.066434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GarageCars</td>\n",
+       "      <td>0.062107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1stFlrSF</td>\n",
+       "      <td>0.041622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TotalBsmtSF</td>\n",
+       "      <td>0.039464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>YearRemodAdd</td>\n",
+       "      <td>0.033883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GarageArea</td>\n",
+       "      <td>0.018856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>YearBuilt</td>\n",
+       "      <td>0.015376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>TotRmsAbvGrd</td>\n",
+       "      <td>0.008738</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        feature  importance\n",
+       "0   OverallQual    0.635339\n",
+       "5     GrLivArea    0.078182\n",
+       "6      FullBath    0.066434\n",
+       "8    GarageCars    0.062107\n",
+       "4      1stFlrSF    0.041622\n",
+       "3   TotalBsmtSF    0.039464\n",
+       "2  YearRemodAdd    0.033883\n",
+       "9    GarageArea    0.018856\n",
+       "1     YearBuilt    0.015376\n",
+       "7  TotRmsAbvGrd    0.008738"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Preparing the test data for prediction (combine[1])\n",
     "X_test_final = combine[1].drop(\"Id\", axis=1)  # Assuming the test set has the same features\n",
@@ -2481,7 +2580,13 @@
     "X_test_final = sc_X.transform(X_test_final)    # Standardizing the test set features\n",
     "\n",
     "# Predicting the fare amounts for the final test set\n",
-    "Y_final_pred = xgboost_reg.predict(X_test_final)"
+    "Y_final_pred = xgboost_reg.predict(X_test_final)\n",
+    "\n",
+    "importance = xgboost_reg.feature_importances_\n",
+    "feature_importance = pd.DataFrame({'feature': selected_features, 'importance': importance})\n",
+    "feature_importance = feature_importance.sort_values(by='importance', ascending=False)\n",
+    "\n",
+    "feature_importance"
    ]
   },
   {
